# d-domain

./: .gitignore  CMakeLists.txt  NOTES.md  README.md  configure
src/: access_mixin.hpp  access_policy.hpp  basic_type.hpp  composite_type.hpp  mixin_policy.hpp  name_mixin.hpp  policy.hpp  presence_mixin.hpp  presence_policy.hpp  traits.hpp  value_container.hpp
test/: basic_type_should.cpp  composite_type_should.cpp  main.cpp
